# oidc

./: .gitignore  .stylish-haskell.yaml  cabal.project  cabal.project.freeze  oidc.cabal  shell.nix
oidc/: ChangeLog.md  LICENSE  oidc.cabal
oidc-web/: ChangeLog.md  build-css.sh  oidc-web.cabal
oidc-web/css/: site.scss
oidc-web/js/: site.js
oidc-web/src/OIDC/: Web.hs
oidc-web/src/OIDC/Web/: Handlers.hs  Mail.hs  Monad.hs  Registration.hs  Routes.hs  Session.hs  SignIn.hs
oidc-web/src/Servant/API/Auth/: Xsrf.hs
oidc-web/src/Servant/API/ContentTypes/: Html.hs
oidc-web/src/Servant/Auth/Server/: Remember.hs  Xsrf.hs
oidc-web/src/Servant/Server/Auth/: Xsrf.hs
oidc-web/static/: site.css
oidc/src/OIDC/: Server.hs  Types.hs
oidc/src/OIDC/Backend/: Class.hs  Postgres.hs
oidc/src/OIDC/Crypto/: Jwk.hs  Jwt.hs  Message.hs  Password.hs
oidc/src/OIDC/Server/: ClientStore.hs  KeyStore.hs  Types.hs  UserStore.hs
oidc/src/OIDC/Server/UserStore/: Memory.hs
oidc/src/OIDC/Types/: Client.hs  Email.hs  UserAuth.hs
oidc/tests/: Main.hs
oidc/tests/Tests/: Utils.hs
oidc/tests/Tests/OIDC/Crypto/: Jwt.hs  Message.hs
oidc/tests/Tests/OIDC/Server/KeyStore/: Memory.hs
oidc/tests/Tests/OIDC/Server/UserStore/: Memory.hs
oidc/tests/Tests/OIDC/Types/: Email.hs
src/OIDC/: Server.hs  Types.hs
src/OIDC/Crypto/: Jwk.hs  Jwt.hs  Message.hs  Password.hs  RNG.hs
src/OIDC/Server/: Types.hs
src/OIDC/Server/ClientStore/: Memory.hs
src/OIDC/Server/KeyStore/: Memory.hs
src/OIDC/Server/Store/Memory/: ClientStore.hs  KeyStore.hs  UserStore.hs
src/OIDC/Types/: Client.hs  Email.hs  UserAuth.hs
tests/: Main.hs
tests/Tests/: Utils.hs
tests/Tests/OIDC/Crypto/: Jwt.hs  Message.hs
tests/Tests/OIDC/Server/Store/Memory/: KeyStore.hs  UserStore.hs
tests/Tests/OIDC/Server/UserStore/: Memory.hs
tests/Tests/OIDC/Types/: Email.hs
