name:                oidc
version:             0.1.0.0
synopsis:            OpenID Connect Server
-- description:
license:             BSD3
license-file:        LICENSE
author:              Leonid Onokhov
maintainer:          sopvop@gmail.com
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:  base >=4.10 && <4.11,
                  text,
                  bytestring,
                  jose,
                  http-types,
                  http-api-data,
                  wai,
                  time,
                  cryptonite,
                  memory,
                  errors,
                  text-icu,
                  postgresql-simple,
                  resource-pool,
                  exceptions,
                  transformers

  hs-source-dirs:      src
  default-language:    Haskell2010
