name:                oidc
version:             0.1.0.0
synopsis:            OpenID Connect Server
-- description:
license:             BSD3
license-file:        LICENSE
author:              Leonid Onokhov
maintainer:          sopvop@gmail.com
-- copyright:
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:
    OIDC.Crypto.Jwk
    OIDC.Crypto.Jwt
    OIDC.Crypto.Message
    OIDC.Crypto.Password
    OIDC.Crypto.RNG
    OIDC.Server
    OIDC.Server.Store.Memory.ClientStore
    OIDC.Server.Store.Memory.UserStore
    OIDC.Server.Types
    OIDC.Types
    OIDC.Types.Client
    OIDC.Types.Email
    OIDC.Types.UserAuth
  -- other-modules:
  -- other-extensions:
  build-depends: base >=4.10 && <4.11
               , aeson                ^>= 1.2.3
               , bytestring           ^>= 0.10.8
               , containers           ^>= 0.5.10
               , cryptonite           ^>= 0.24
               , email-validate       ^>= 2.3.2
               , errors               ^>= 2.2.2
               , exceptions           ^>= 0.8.3
               , hashable             ^>= 1.2.6
               , http-api-data        ^>= 0.3.7
               , http-media           ^>= 0.7.1
               , http-types           ^>= 0.9.1
               , jose                 ^>= 0.6.0
               , katip                ^>= 0.5.2
               , lens                 ^>= 4.15.4
               , memory               ^>= 0.14.11
               , mtl                  ^>= 2.2.1
               , monad-time           ^>= 0.2
               , postgresql-simple    ^>= 0.5.3
               , resource-pool        ^>= 0.2.3
               , serialise            ^>= 0.2.0
               , streaming-bytestring ^>= 0.1.5
               , text                 ^>= 1.2.2
               , text-icu             ^>= 0.7.0
               , time                 ^>= 1.8.0
               , transformers         ^>= 0.5.2
               , unordered-containers ^>= 0.2.8
               , uuid                 ^>= 1.3.13
               , wai                  ^>= 3.2.1
               , wai-extra            ^>= 3.0.21


  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
test-suite tests
  type:              exitcode-stdio-1.0
  hs-source-dirs:    tests
  main-is: Main.hs
  default-language:  Haskell2010
  ghc-options:
    -threaded -rtsopts "-with-rtsopts=-N" -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -fno-warn-orphans
  other-modules:
    Tests.OIDC.Crypto.Message
    Tests.OIDC.Crypto.Jwt
    Tests.OIDC.Server.Store.Memory.UserStore
    Tests.OIDC.Types.Email
    Tests.Utils
  build-depends: base >= 4.10 && < 4.11
               , bytestring
               , cryptonite
               , errors
               , jose
               , lens
               , oidc
               , text
               , time
               , uuid

               , tasty                    ^>= 0.11.3
               , tasty-hunit              ^>= 0.9.2
               , tasty-quickcheck         ^>= 0.9.1
               , QuickCheck               ^>= 2.10.1
